syntax = "proto3";

package com.ryam.ecommerce.internal.proto;

import "google/protobuf/timestamp.proto";

option java_package = "com.ryam.ecommerce.internal.proto";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (SuccessResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
}

message User {
  string uuid = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string first_name = 4;
  optional string middle_name = 5;
  string last_name = 6;
  int32 age = 7;
  optional string phone = 8;
  optional string email = 9;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string uuid = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string uuid = 1;
  optional string first_name = 2;
  optional string middle_name = 3;
  optional string last_name = 4;
  optional int32 age = 5;
  optional string phone = 6;
  optional string email = 7;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string uuid = 1;
}

message SuccessResponse {
  bool success = 1;
}

message GetAllUsersRequest {
}

message GetAllUsersResponse {
  repeated User users = 1;
}